--- a/src/app/components/register-user/register-user.component.html
+++ b/src/app/components/register-user/register-user.component.html
@@ -12,7 +12,9 @@
                     required
                     name="email"
                     ngModel
-                    #email="ngModel">
+                    #email="ngModel"
+                    [(ngModel)] = "usuario.email"
+                    >
                     <mat-error *ngIf="email.invalid">Email is required</mat-error>
                   <mat-icon matSuffix>email</mat-icon>
                 </mat-form-field>
@@ -25,7 +27,9 @@
                     minlength="6"
                     name="password"
                     ngModel
-                    #password="ngModel">
+                    #password="ngModel"
+                    [(ngModel)]="usuario.password" 
+                    >
                     <mat-error
                       *ngIf="password.errors && password.errors.required">
                       Password is required
@@ -36,11 +40,12 @@
                     </mat-error>
                   <mat-icon matSuffix>lock</mat-icon>
                 </mat-form-field>
-                <mat-checkbox>Remember Me!</mat-checkbox>
                 <button
                   mat-raised-button
                   color="primary"
-                  class="login-button">
+                  class="login-button"
+                  (click)="singIn()"
+                  >
                   Sign In
                 </button>
               </form>
@@ -49,21 +54,6 @@
         <mat-tab label="Sign Up">
           <mat-card-content>
             <form action="">
-              <mat-form-field>
-                <input
-                  matInput
-                  placeholder="User Name"
-                  required
-                  name="username"
-                  ngModel
-                  #username="ngModel">
-                <mat-icon matSuffix>perm_identity</mat-icon>
-                <mat-error
-                  *ngIf="username.invalid">
-                  Username is required
-                </mat-error>
-  
-              </mat-form-field>
               <mat-form-field>
                 <input
                   matInput
