--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,14 @@
-<p>navbar works!</p>
+
+    <mat-toolbar color="primary" class="mat-elevation-z8">
+      <span>
+        <mat-icon>catching_pokemon</mat-icon>  
+        My Application
+      </span>
+
+      <div class="spacer"></div>
+      
+      <a mat-button routerLink="home" routerLinkActive="active">Home</a>
+      <a mat-button routerLink="view" routerLinkActive="active">Ver productos</a>
+      <a mat-button routerLink="add" routerLinkActive="active">Agregar productos</a>
+    </mat-toolbar>
+  
