--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -3,25 +3,25 @@
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
   
-    <!-- Position Column -->
+    <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
       <td mat-cell *matCellDef="let game"> {{game.name}} </td>
     </ng-container>
   
-    <!-- Name Column -->
+    <!-- Clasification Column -->
     <ng-container matColumnDef="clasification">
       <th mat-header-cell *matHeaderCellDef> Clasification </th>
       <td mat-cell *matCellDef="let game"> {{game.clasification}} </td>
     </ng-container>
   
-    <!-- Weight Column -->
+    <!-- Year Column -->
     <ng-container matColumnDef="year">
       <th mat-header-cell *matHeaderCellDef> Year </th>
       <td mat-cell *matCellDef="let game"> {{game.year}} </td>
     </ng-container>
   
-    <!-- Symbol Column -->
+    <!-- Type Column -->
     <ng-container matColumnDef="type">
       <th mat-header-cell *matHeaderCellDef> Type </th>
       <td mat-cell *matCellDef="let game"> {{game.type}} </td>
@@ -29,6 +29,8 @@
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+</table>
+  
+
   
   
